--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,400;1,500&display=swap");
+
 body {
     display: flex;
     flex-direction: column;
@@ -30,8 +32,13 @@ header {
 
 header ion-icon {
     cursor: pointer;
-    font-size: 50px;
+    font-size: 45px;
     margin: 22px
+}
+
+header ion-icon:hover {
+    transform: scale(1.1);
+    transition: 300ms;
 }
 
 header img {
@@ -65,6 +72,23 @@ main::-webkit-scrollbar {
     display: none;
 }
 
+.status-user {
+    background: #dcdcdc;
+}
+
+.public-chat {
+    background-color: #fff;
+}
+
+.private-chat {
+    background: #ffdede;
+}
+
+.time {
+    margin-right: 5px;
+    color: #b8b8b8;
+}
+
 /*Parte Inferior*/
 
 footer {
@@ -73,3 +97,35 @@ footer {
     color: #303030;
     height: 80px;
 }
+
+footer ion-icon {
+    font-size: 26px;
+    margin: 18px;
+    cursor: pointer;
+}
+
+footer ion-icon:hover{
+    transform: scale(1.2);
+    transition: 300ms;
+}
+
+
+/*menu oculto*/
+
+.menu{
+ position: fixed;
+ z-index: 3;
+ top: 0;
+ right: 0;
+ display: flex;
+ background: #fff;
+ width: 210px;
+ height: 100%;
+ flex-direction: column;
+ padding: 0 20px;
+ transition: all 150ms linear;
+ overflow-y:scroll;
+}
+.hidden {
+    display: none;
+  }
