--- a/css/styles.css
+++ b/css/styles.css
@@ -3,52 +3,46 @@
 body {
     display: flex;
     flex-direction: column;
-    background-color: #f3f3f3;
+    background: #f3f3f3;
     font-family: "Roboto", sans-serif;
-    color: #333;
+    color: #333333;
 }
 
 header,
 footer {
-    display: flex;
-    width: 100%;
+    width: 100vw;
     position: fixed;
     left: 0;
     z-index: 2;
+    display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: goldenrod;
+    background: #FFFFFF;
 }
-
-/*Parte Superior*/
 
 header {
     top: 0;
-    height: 88px;
+    height: 80px;
     font-size: 40px;
     box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.1);
-
-}
-
-header ion-icon {
-    cursor: pointer;
-    font-size: 45px;
-    margin: 22px
-}
-
-header ion-icon:hover {
-    transform: scale(1.1);
-    transition: 300ms;
 }
 
 header img {
     width: 75px;
     height: 53px;
     margin: 22px;
-
 }
 
-/*parte do centro*/
+header ion-icon {
+    font-size: 50px;
+    margin: 22px;
+    cursor: pointer;
+}
+
+header ion-icon:hover {
+    transform: scale(1.1);
+    transition: 300ms;
+}
 
 main {
     width: 100%;
@@ -57,19 +51,20 @@ main {
     font-size: 14px;
     overflow: scroll;
     -ms-overflow-style: none;
-    scrollbar-width: noen;
-}
-
-main li {
-    width: 100px;
-    padding: 10px;
-    margin-bottom: 4px;
-    line-height: 22px;
-    word-break: break-word;
+    /* OLHAR SCROLL BAR*/
+    scrollbar-width: none;
 }
 
 main::-webkit-scrollbar {
     display: none;
+}
+
+main li {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 4px;
+    line-height: 22px;
+    word-break: break-word;
 }
 
 .status-user {
@@ -77,7 +72,7 @@ main::-webkit-scrollbar {
 }
 
 .public-chat {
-    background-color: #fff;
+    background: #fff;
 }
 
 .private-chat {
@@ -89,43 +84,119 @@ main::-webkit-scrollbar {
     color: #b8b8b8;
 }
 
-/*Parte Inferior*/
-
 footer {
-    bottom: 0px;
+    bottom: 0;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.05);
     color: #303030;
     height: 80px;
 }
 
 footer ion-icon {
+    cursor: pointer;
     font-size: 26px;
     margin: 18px;
-    cursor: pointer;
 }
 
-footer ion-icon:hover{
-    transform: scale(1.2);
+footer ion-icon:hover {
+    transform: scale(1.1);
     transition: 300ms;
 }
 
-
-/*menu oculto*/
-
-.menu{
- position: fixed;
- z-index: 3;
- top: 0;
- right: 0;
- display: flex;
- background: #fff;
- width: 210px;
- height: 100%;
- flex-direction: column;
- padding: 0 20px;
- transition: all 150ms linear;
- overflow-y:scroll;
+.message-field {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    letter-spacing: -0.5px;
+    padding-left: 18px;
 }
+
+.message-field input {
+    margin-bottom: 10px;
+    border: none;
+}
+
+.message-field input::placeholder {
+    font-style: italic;
+    font-size: 16px;
+    color: #606060;
+}
+
+.message-field span {
+    font-size: 15px;
+    font-weight: 100;
+}
+
+.menu {
+    position: fixed;
+    z-index: 3;
+    top: 0;
+    right: 0;
+    display: flex;
+    background: #fff;
+    width: 210px;
+    height: 100%;
+    flex-direction: column;
+    padding: 0 20px;
+    transition: all 150ms linear;
+    overflow-y: scroll;
+}
+
+.menu-title {
+    text-align: center;
+    margin: 20px 0;
+    padding: 0 5px;
+    font-size: 15px;
+    font-weight: 700;
+    line-height: 20px;
+    letter-spacing: -0.5px;
+}
+
+.menu li {
+    cursor: pointer;
+    font-size: 14px;
+    margin: 10px 0;
+    display: flex;
+    align-items: center;
+    position: relative;
+    word-break: break-word;
+}
+
+.menu li:hover {
+    transform: scale(1.1);
+    transition: 300ms;
+}
+
+.menu ion-icon {
+    cursor: pointer;
+    margin-right: 10px;
+    font-size: 20px;
+    margin-top: -2px;
+    flex-shrink: 0;
+}
+
+.check {
+    position: absolute;
+    right: -5px;
+    top: -2px;
+    color: #61aa47;
+    display: none;
+}
+
+.selected .check {
+    display: inline;
+}
+
+.overlay {
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    z-index: 3;
+    top: 0;
+    right: 0;
+    background: #0009;
+    transition: all 150ms linear;
+}
+
 .hidden {
     display: none;
-  }
+}
